--- a/VendaPedido/pom.xml
+++ b/VendaPedido/pom.xml
@@ -60,6 +60,15 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<!-- OmniFcaes (utilitarios para JSF) -->
+		<dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+			<version>1.5</version>
+			<scope>compile</scope>
+		</dependency>
+		
+
 		<!-- Log4J -->
 		<dependency>
 			<groupId>log4j</groupId>
