--- a/VendaPedido/pom.xml
+++ b/VendaPedido/pom.xml
@@ -5,13 +5,13 @@
 	<artifactId>VendaPedido</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
-  
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
-	
+
 		<!-- Implementacao do Bean Validation -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -19,7 +19,7 @@
 			<version>5.0.1.Final</version>
 			<scope>compile</scope>
 		</dependency>
-	
+
 		<!-- Núcleo do Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -27,7 +27,7 @@
 			<version>4.2.3.Final</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<!-- Implementação de EntityManager da JPA -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -43,7 +43,7 @@
 			<version>5.1.25</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<!-- Weld (implementação do CDI) -->
 		<dependency>
 			<groupId>org.jboss.weld.servlet</groupId>
@@ -67,7 +67,7 @@
 			<version>1.5</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 
 		<!-- Log4J -->
 		<dependency>
@@ -92,15 +92,23 @@
 			<version>2.1.21</version>
 			<scope>compile</scope>
 		</dependency>
-	
-	<!-- Commons Lang (utilidades) -->
+
+		<!-- Commons Lang (utilidades) -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 			<scope>compile</scope>
 		</dependency>
-    </dependencies>
+
+		<!-- Servlet API -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<finalName>VendaPedido</finalName>
