--- a/VendaPedido/src/main/resources/mail.properties
+++ b/VendaPedido/src/main/resources/mail.properties
@@ -2,5 +2,5 @@ mail.server.host=smtp.gmail.com
 mail.server.port=465
 mail.enable.ssl=true
 mail.auth=true
-mail.username=caic.souz@hotmail.com
-mail.password=Ab@123456
+mail.username=cspassos.vendas1@gmail.com
+mail.password=sobrenatural123
