--- a/VendaPedido/src/main/resources/mail.properties
+++ b/VendaPedido/src/main/resources/mail.properties
@@ -2,5 +2,5 @@ mail.server.host=smtp.gmail.com
 mail.server.port=465
 mail.enable.ssl=true
 mail.auth=true
-mail.username=cspassos.vendas1@gmail.com
-mail.password=sobrenatural123
+mail.username=testeemail@gmail.com
+mail.password=testesenha
